opengl/eglcontext: always bind the desired EGL API before context creation

Loading Vulkan drivers can change / reset the current EGL API in some cases,
which in turn changes the valid parameters for eglCreateContext and can make
context creation fail.

BUG: 521742